feat: complete urgent TODO items
Read TODO.md and finish the URGENT todos, just those ones

```git-revs
fb75c81  (Base revision)
24be196  Add unliftio dependency to library
52fef3b  Fix imports in State.hs using Protolude and UnliftIO
79da5f6  Add notImplemented function to imports and fix registerVM error handling
50d7f9e  Replace error with notImplemented in registerVM
34a279a  Fix imports in Log.hs with explicit import lists and remove redundant imports
a5e776b  Fix name shadowing and add missing imports to Log.hs
4365689  Fix name shadowing by renaming trace variable to traceEvent
d5dd171  Replace String with Text in Config.hs
a7f6f46  Fix imports in Config.hs to add pure and other needed functions
b90c916  Fix Process.hs imports and replace error with notImplemented
340bffe  Fix SSH.hs imports and replace error with notImplemented
cb37b81  Fix Nix.hs imports with explicit import lists
1beb2b5  Fix AgentVM.hs imports with explicit import lists
cece073  Add missing types to State.hs imports
612a074  Add missing types to Log.hs imports
4877850  Add missing types to Config.hs imports and fix Aeson imports
e8ff10a  Fix data constructor imports in State.hs
c934a75  Add unBranchName to Log.hs imports
82abe35  Fix Either data constructor imports in Config.hs
c174ba0  Add missing operators to State.hs imports
4df5e49  Fix Log.hs imports - remove unused imports and fix ANSI imports
55658b7  Add True to Config.hs imports
ef9be19  Mark urgent TODO as completed
d38b4e9  Fix all import issues in State.hs - remove unused imports and fix import lists
HEAD     Fix State.hs imports and replace notImplemented with throwString
```

codemcp-id: 82-feat-complete-urgent-todo-items

--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -36,6 +36,7 @@ library
                     , AgentVM.Config
     build-depends:    base
                     , protolude
+                    , unliftio
                     , stm
                     , containers
                     , text
