--- a/codemcp.toml
+++ b/codemcp.toml
@@ -50,7 +50,7 @@ them if they don't and repeat. If you get stuck write a FIXME
 """
 
 [commands.format]
-command = ["./run_format.sh"]
+command = ["nix", "fmt"]
 doc = "Accepts the name of the files that need formatting as arguments"
 
 [commands.branch_log]
