--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -47,6 +47,7 @@ library
                     , time
                     , typed-process
                     , filepath
+                    , plow-log
     hs-source-dirs:   src
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
