--- a/codemcp.toml
+++ b/codemcp.toml
@@ -1,50 +1,51 @@
 # codemcp configuration file
 project_prompt = """
-You MUST always obey the following rules:
+# You MUST always obey the following rules
 
-Read the README.md and TODO.md documents to see what's going on
+## Read the README.md and TODO.md documents to see what's going on
 
-Use protolude and use unliftio when possible instead of base, specially for
+## Use protolude and use unliftio when possible instead of base, specially for
 exception handling. Never catch SomeExeption explicitly, use the `*Any`
 functions from UnliftIO instead.
 
-Never use String unless mandated by an external library, always Text or
+## Never use String unless mandated by an external library, always Text or
 ByteString instead
 
-When implementing new functions, first get the type signatures right leaving the
-body as `notImplemented`. Always write a unit test or integration test for new
-functionality or when there are new cases to test.
+## Use a Type-Test-Driven-Approach, that is, when implementing new functions:
 
-When fleshing out the implementations, always implement the test or integration
-test body first, ONE AT A TIME, run just that one test to see if fail and then
-proceed until you run the test and see it pass.
+1. Get the type signatures right and the body as `notImplemented`.
+   Always write a unit test or integration test for new
+   functionality or when there are new cases to test.
+2. Make sure it builds without errors.
+3. Stop and ask me for feedback
+4. If approved, flesh out the implemenation of the test body.
+4. Run the test to see it fail
+5. Implement the function body
+6. Run the appropiate tests and see them pass, backtrack to 5 until they do
+
 Then, and only then, proceed to implement another test body
 
-Check with the `test` command that everything compiles after every edit.
-
-When told to "continue", or "continue where you left off",... use the
+## When told to "continue", or "continue where you left off",... use the
 'branch_log' command to inspect the last commit you made and continue. I may
 have left a commit after yours to help you out, inspect it and take it into
 account.
 
-You can use the 'hoogle' command to search for documentation about symbols in
+## You can use the 'hoogle' command to search for documentation about symbols in
 any external dependency we have available. You should implement functionality
 using existing dependencies when possible.
 
-When editing cabal files, do not add version bounds to packages.
+## When editing cabal files, do not add version bounds to packages.
 
-You MUST always run the 'cabal_test' command on every package you modify and fix any
+## You MUST always run the 'cabal_build' command on every package you modify and fix any
 errors. Do this after every edit that affects haskell code and fix errors before
 proceeding.
 
-You MUST always run the 'hlint' command on every Haskell file after every testing
+You MUST always run the 'hlint' command on every Haskell file after testing
 your edits and fix ALL the warnings and errors it reports.
 
 You MUST always use Generic deriving mechanisms for JSON/YAML
 serialization, never hand-code it.  Use DeriveAnyClass and
 DuplicateRecordFields for nice field names. Use OverloadedRecordDot extension to disambiguate types on record access
-
-You MUST always use explicit import and export lists.
 
 ## Final tasks
 
