--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -48,6 +48,7 @@ library
                     , typed-process
                     , filepath
                     , plow-log
+                    , plow-log-async
     hs-source-dirs:   src
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
