docs: investigate agent-vm project
Read the *.md docs and investigate with hoogle to figure out what this project is about, then report back for orders. Do not edit nothing until I tell you, I'm boss

```git-revs
f638287  (Base revision)
4b878da  Snapshot before auto-hoogle
d39c2e9  Replace LogAction with IOTracer and update imports
2d41aa6  Fix the <& operator to properly use traceWith
6eb5b75  Fix the <& operator to use MonadIO and Tracer
55e7d73  Convert vmLogger to return IOTracer
0fba32e  Update Process module to use IOTracer instead of LogAction
b135d0c  Update Nix module to use IOTracer instead of LogAction
85cd5a0  Update runVMScript to use IOTracer
31854e5  Remove LogAction from re-exports in AgentVM module
8c3aeb5  Update main to use plow-log-async with withAsyncHandleTracer
5dc3740  Update main function to use withAsyncHandleTracer
741a2d3  Fix vmLogger to properly lift IO actions into MonadIO
3d9a800  Use UnliftIO for generic MonadIO operations
4645a4e  Make setSeverityColor generic on MonadIO
0b63ea5  Update vmLogger to use UnliftIO functions directly
0a02e12  Remove Data.Text.IO import since we'll use UnliftIO.IO versions
d638950  Make setSGR work with MonadIO by creating a helper
161ad42  Remove unnecessary liftIO from vmLogger
8a72ea8  Remove unnecessary liftIO from setSeverityColor
e7758f2  Create MonadIO versions of Text IO functions
fa50a66  Add (.) to Protolude imports
3262c30  Update SSH module to use IOTracer instead of LogAction
ff26521  Clean up imports in Log.hs to fix warnings
34807e6  Remove redundant MonadIO constraint from <&
a8e4447  Clean up imports in Process.hs
2a45304  Re-add ExitCode import for waitForProcess
f7cbcac  Clean up imports in Nix.hs
bf6694a  Add plow-log-async to executable build-depends
f796132  Fix NixSpec to use IOTracer instead of LogAction
39443ec  Fix ProcessSpec to use IOTracer instead of LogAction
HEAD     Add plow-log to test-suite build-depends
```

codemcp-id: 84-docs-investigate-agent-vm-project

--- a/codemcp.toml
+++ b/codemcp.toml
@@ -13,6 +13,12 @@ ByteString instead
 
 ## Use a Type-Test-Driven-Approach, that is, when implementing new functions:
 
+First of all, NO MOCKS! Only end2end for IO actions, do as many hspec property
+tests as you want for what can (and should!) be tested that way. But stuff that
+does IO should do it, if it needs a VM it should go into
+agent-vm/integration-test/Main.hs, hear me? Otherwise add it for hspec to discover under
+agent-vm/test, ok?
+
 1. Get the type signatures right and the body as `notImplemented`.
    Always write a unit test or integration test for new
    functionality or when there are new cases to test.
