--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -60,6 +60,7 @@ executable agent-vm
                     , protolude
                     , agent-vm
                     , optparse-applicative
+                    , plow-log-async
     hs-source-dirs:   app
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
@@ -81,6 +82,7 @@ test-suite spec
                     , temporary
                     , stm
                     , containers
+                    , plow-log
     hs-source-dirs:   test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
