--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -49,6 +49,7 @@ library
                     , filepath
                     , plow-log
                     , plow-log-async
+                    , network
     hs-source-dirs:   src
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
@@ -83,6 +84,7 @@ test-suite spec
                     , stm
                     , containers
                     , plow-log
+                    , network
     hs-source-dirs:   test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
