--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -100,6 +100,7 @@ executable agent-vm-test
                     , agent-vm
                     , hspec
                     , temporary
+                    , unliftio
     hs-source-dirs:   integration-test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
