--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -22,7 +22,6 @@ common warnings
                  -Wredundant-constraints
                  -Wunused-packages
                  -Wmissing-import-lists
-                 -Wno-unused-packages
 
 library
     import:           warnings
@@ -50,6 +49,9 @@ library
                     , plow-log
                     , plow-log-async
                     , network
+                    , microlens
+                    , microlens-mtl
+                    , generic-lens
     hs-source-dirs:   src
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
