refactor: use ReaderT pattern for VM operations
Refactor createVM and destroyVM functions to use ReaderT pattern with generic-lens and microlens-mtl

```git-revs
ad28ac1  (Base revision)
1ae618e  Snapshot before codemcp change
1495768  Snapshot before codemcp change
95fbec0  Add hlint annotation to suppress newtype suggestion
e3fd261  Add AgentVM.Env to exposed modules
HEAD     Snapshot before codemcp change
```

codemcp-id: 87-refactor-use-readert-pattern-for-vm-operations

--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -33,6 +33,7 @@ library
                     , AgentVM.Nix
                     , AgentVM.Log
                     , AgentVM.Config
+                    , AgentVM.Env
     build-depends:    base
                     , protolude
                     , unliftio
