--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -34,6 +34,7 @@ library
                     , AgentVM.Log
                     , AgentVM.Config
                     , AgentVM.Env
+                    , AgentVM.Class
     build-depends:    base
                     , protolude
                     , unliftio
