--- a/agent-vm/agent-vm.cabal
+++ b/agent-vm/agent-vm.cabal
@@ -35,6 +35,7 @@ library
                     , AgentVM.Config
                     , AgentVM.Env
                     , AgentVM.Class
+                    , AgentVM.Monad
     build-depends:    base
                     , protolude
                     , unliftio
@@ -54,6 +55,7 @@ library
                     , microlens
                     , microlens-mtl
                     , generic-lens
+                    , mtl
     hs-source-dirs:   src
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
