fix: resolve cabal build warnings
run `cabal_build --ghc-options=-fforce-recomp` and fix warnings except those thrown by `notImplemented` ones

```git-revs
3481394  (Base revision)
HEAD     Snapshot before auto-cabal_build
```

codemcp-id: 94-fix-resolve-cabal-build-warnings

--- a/codemcp.toml
+++ b/codemcp.toml
@@ -102,11 +102,11 @@ verbosity = "DEBUG"
 command = ["nix", "flake", "check"]
 
 [commands.cabal_build]
-command = ["env", "-C", "./agent-vm", "cabal", "build"]
+command = ["cabal", "build"]
 doc = "Runs cabal build. Accepts the name of a single package as an argument to run their specific tests"
 
 [commands.cabal_test]
-command = ["env", "-C", "./agent-vm", "cabal", "test"]
+command = ["cabal", "test"]
 doc = "Runs cabal test. Accepts the name of a single package as an argument to run their specific tests"
 
 [commands.lynx]
