--- a/codemcp.toml
+++ b/codemcp.toml
@@ -1,27 +1,5 @@
 # codemcp configuration file
 project_prompt = """
-# Methodology
-
-## Use a Type-Test-Driven-Approach, that is, when implementing new functions:
-
-First of all, NO MOCKS! Only end2end for IO actions, do as many hspec property
-tests as you want for what can (and should!) be tested that way. But stuff that
-does IO should do it, if it needs a VM it should go into
-agent-vm/integration-test/Main.hs, hear me? Otherwise add it for hspec to discover under
-agent-vm/test, ok?
-
-1. Get the type signatures right and the body as `notImplemented`.
-   Always write a unit test or integration test for new
-   functionality or when there are new cases to test.
-2. Make sure it builds without errors.
-3. Stop and ask me for feedback
-4. If approved, flesh out the implemenation of the test body.
-4. Run the test to see it fail
-5. Implement the function body
-6. Run the appropiate tests and see them pass, backtrack to 5 until they do
-
-Then, and only then, proceed to implement another test body
-
 # You MUST always obey the following rules
 
 ## Read the README.md, TODO.md and other **.md documents to see what's going on.
@@ -29,6 +7,8 @@ Then, and only then, proceed to implement another test body
 ## Use protolude and use unliftio when possible instead of base, specially for
 exception handling. Never catch SomeExeption explicitly, use the `*Any`
 functions from UnliftIO instead.
+
+## Always use Protolude.toS for string conversions!
 
 ## Never use String unless mandated by an external library, always Text or
 ByteString instead
@@ -56,6 +36,29 @@ your edits and fix ALL the warnings and errors it reports.
 ## You MUST always use Generic deriving mechanisms for JSON/YAML
 serialization, never hand-code it.  Use DeriveAnyClass and
 DuplicateRecordFields for nice field names. Use OverloadedRecordDot extension to disambiguate types on record access
+
+# Methodology
+
+## Use a Type-Test-Driven-Approach, that is, when implementing new functions:
+
+First of all, NO MOCKS! Only end2end for IO actions, do as many hspec property
+tests as you want for what can (and should!) be tested that way. But stuff that
+does IO should do it, if it needs a VM it should go into
+agent-vm/integration-test/Main.hs, hear me? Otherwise add it for hspec to discover under
+agent-vm/test, ok?
+
+1. Get the type signatures right and the body as `notImplemented`.
+   Always write a unit test or integration test for new
+   functionality or when there are new cases to test.
+2. Make sure it builds without errors.
+3. Stop and ask me for feedback
+4. If approved, flesh out the implemenation of the test body.
+4. Run the test to see it fail
+5. Implement the function body
+6. Run the appropiate tests and see them pass, backtrack to 5 until they do
+
+Then, and only then, proceed to implement another test body
+
 
 # Final tasks
 
