downgraded to ghc967 for HLS

--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -39,6 +39,7 @@ library
     build-depends:    base
                     , protolude
                     , unliftio
+                    , unbounded-delays
                     , stm
                     , containers
                     , text
