--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -18,12 +18,11 @@
   - {name: foldl, within: [], message: "Leaks space. Use Data.List.foldl' instead with a strict (BangPattern'd) accumulator"}
 
   - {name: putStrLn, within: [], message: "Fine for debugging when developing but remove before committing or use plow-log instead"}
-  - {name: hPutStrLn, within: [], message: "Fine for debugging when developing but remove before committing or use plow-log instead"}
+  - {name: hPutStrLn, within: ["AgentVM.Log"], message: "Fine for debugging when developing but remove before committing or use plow-log instead"}
   - {name: print, within: [], message: "Fine for debugging when developing but remove before committing or use plow-log instead"}
   - {name: hPrint, within: [], message: "Fine for debugging when developing but remove before committing or use plow-log instead"}
   - {name: putStr, within: [], message: "Fine for debugging when developing but remove before committing or use plow-log instead"}
-  - {name: hPutStr, within: [], message: "Fine for debugging when developing but remove before committing or use plow-log instead"}
-  - {name: hPutStr, within: [], message: "Fine for debugging when developing but remove before committing or use plow-log instead"}
+  - {name: hPutStr, within: ["AgentVM.Log"], message: "Fine for debugging when developing but remove before committing or use plow-log instead"}
 
   - {name: forkIO, within: [], message: "Use Control.Concurrent.Async.withAsync (or async if withAsync not possible) from async package instead"}
   - {name: forkOn, within: [], message: "Use Control.Concurrent.Async.withAsyncOn (or asyncOn if withAsyncOn not possible) from async package instead"}
@@ -46,15 +45,16 @@
   - {name: UnliftIO.Timeout, badidents: [timeout], message: "May easily overflow in 32 bit systems. Use Control.Concurrent.Timeout.timeout from unbounded-delays package instead"}
   - {name: System.Timeout.Lifted, badidents: [timeout], message: "May easily overflow in 32 bit systems. Use Control.Concurrent.Timeout.timeout from unbounded-delays package instead"}
 
-  - error: {name: unsafeCoerce, within: [], message: "Use Data.Coerce.coerce instead"}
-  - error: {name: unsafePerformIO, within: [], message: "Just don't"}
 
 - group:
-    name: partial
+    name: forbidden
     enabled: true
     imports:
     - package base
     rules:
+
+    - error: {name: unsafeCoerce, within: [], message: "Use Data.Coerce.coerce instead"}
+    - error: {name: unsafePerformIO, within: [], message: "Just don't"}
 
     # Data.Bifoldable
 
