fix: resolve cabal build warnings
fix the warnings when running cabal_build command

```git-revs
0d7ba83  (Base revision)
d07a942  Snapshot before auto-cabal_build
8b26b43  Snapshot before codemcp change
54e75b2  Use plow-log tracer instead of putStrLn to fix hlint warning
7e87690  Snapshot before codemcp change
1d66a2e  Snapshot before codemcp change
fefe3e7  Replace second threadDelay with delay in 'detects when process has exited with failure' test
f4b74ae  Snapshot before auto-cabal_build
e6dc217  Remove the unbounded-delays import from ProcessSpec.hs
c2c8deb  Snapshot before codemcp change
183d6b7  Add HLint pragma to disable threadDelay warning
4554087  Fix Main.hs to use ProcessError trace constructor
57dd17a  Add unbounded-delays to test suite dependencies
dac5d78  Snapshot before codemcp change
6b7cd1b  Replace threadDelay with delay in the first test
ecfb816  Snapshot before auto-cabal_build
c251033  Add ProcessError to the import list in Main.hs
01168bc  Import AgentVmTrace type with ProcessError constructor
c52671b  Fix the trace usage and add OverloadedStrings
300f269  Import traceWith and fix the trace usage
5f85cdf  Fix the trace usage with traceWith
f6db659  Import toS from Protolude for string to Text conversion
1d4fa89  Add plow-log to executable build-depends
94973cc  Fix type ambiguity with explicit type annotation
HEAD     Use [Char] instead of String
```

codemcp-id: 99-fix-resolve-cabal-build-warnings

--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -69,6 +69,7 @@ executable agent-vm
                     , agent-vm
                     , optparse-applicative
                     , plow-log-async
+                    , plow-log
     hs-source-dirs:   app
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
@@ -92,6 +93,7 @@ test-suite spec
                     , containers
                     , plow-log
                     , network
+                    , unbounded-delays
     hs-source-dirs:   test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
