--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -94,6 +94,7 @@ test-suite spec
                     , plow-log
                     , network
                     , unbounded-delays
+                    , filepath
     hs-source-dirs:   test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
