--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -95,6 +95,7 @@ test-suite spec
                     , network
                     , unbounded-delays
                     , filepath
+                    , directory
     hs-source-dirs:   test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
