--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -57,6 +57,7 @@ library
                     , microlens-mtl
                     , generic-lens
                     , mtl
+                    , unix
     hs-source-dirs:   src
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
