feat: complete next TODO task
read TODO.md and perform next task

```git-revs
aafa457  (Base revision)
d16f5d6  Add new function exports for captured output versions
6a7d533  Add imports and types for captured output
5a61205  Add VMProcessWithCapture data type
db33d67  Add startLoggedProcessWithCapture function
05b8ddb  Add waitForProcessCaptured function
7785dfe  Add intercalate import
aefdea4  Add stopVMProcessCaptured function
faf5d39  Add withVMProcessCaptured function
79e1c14  Add missing imports for SomeException and throwIO
5d5dfb2  Fix tuple section syntax in traceAndCaptureOutput
c6688a2  Import reverse from Data.List
207ee59  Fix intercalate usage for Text
0068d11  Fix intercalate usage to T.intercalate
3f459b8  Fix intercalate usage in stopVMProcessCaptured
72dd110  Add OverloadedStrings extension
e7e2f94  Add imports for the new captured functions
1b41b12  Snapshot before codemcp change
63fc3fa  Snapshot before codemcp change
8b94f80  Fix partial function warnings in test
1c3b053  Add VMProcessWithCapture import
8e1d018  Add missing exports
0f9c763  Fix userError import
305ca45  Import IOError types
ea53d64  Simplify exception throwing
fc3bef4  Fix exception throwing without userError
99c1126  Simplify exception throwing using ioError
9781c7b  Import userErrorType
b30c531  Fix Text to String conversions in tests
7846ea3  Fix remaining Text to String conversions
3de4463  Fix more string conversions
cd0650b  Fix ioError with liftIO
10430b1  Fix type ambiguity in exception test
fbf67ed  Snapshot before codemcp change
b5f6c8a  Fix redundant pure in integration test
bffe154  Add Process module import and fix the test
29a13ff  Fix the test to use the correct API for captured output
13fb26f  Add NoImplicitPrelude extension
4916cc4  Snapshot before codemcp change
9b1f826  Snapshot before codemcp change
0bc5894  Replace threadDelay with delay
d3c696f  Add LambdaCase extension
521a0cb  Snapshot before codemcp change
58b64b5  Rewrite file with NumericUnderscores ex

--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -113,6 +113,8 @@ executable agent-vm-test
                     , hspec
                     , temporary
                     , unliftio
+                    , unbounded-delays
+                    , typed-process
     hs-source-dirs:   integration-test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
