--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -9,6 +9,19 @@ maintainer:         alberto@toscat.net
 category:           System
 build-type:         Simple
 
+extra-source-files:
+  test/fixtures/ProcessSpec/*.sh
+data-files:
+  test/fixtures/ProcessSpec/echo_both.sh
+  test/fixtures/ProcessSpec/exit_failure.sh
+  test/fixtures/ProcessSpec/rapid_output.sh
+  test/fixtures/ProcessSpec/echo_stderr.sh
+  test/fixtures/ProcessSpec/multiline_output.sh
+  test/fixtures/ProcessSpec/unexpected_termination.sh
+  test/fixtures/ProcessSpec/echo_stdout.sh
+  test/fixtures/ProcessSpec/no_output.sh
+  test/fixtures/ProcessSpec/zombie_process.sh
+
 common warnings
     ghc-options: -Wall
                --  -Werror
@@ -22,7 +35,6 @@ common warnings
                  -Wredundant-constraints
                  -Wunused-packages
                  -Wmissing-import-lists
-                 -fforce-recomp
 
 library
     import:           warnings
@@ -84,10 +96,14 @@ test-suite spec
     other-modules:    AgentVM.StateSpec
                     , AgentVM.ProcessSpec
                     , AgentVM.NixSpec
+                    , Paths_agent_vm
     build-depends:    base
                     , protolude
+                    , HUnit
+                    , exceptions
                     , agent-vm
                     , hspec
+                    , retry
                     , unliftio
                     , typed-process
                     , temporary
