fix: Clean up compilation warnings except notImplemented
run cabal_test and fix the warnings. Ignore the pending tests and the warnings produced by `notImplemented`, those are the only ones that can stay. I ONLY want you to cleanup the code so it compiles without the rest of the warnings, can't be that hard...

```git-revs
5a05408  (Base revision)
d482fb4  Snapshot before auto-cabal_build
4e0b89c  Add explicit import list for Protolude to fix -Wmissing-import-lists warning
97ad2ba  Add explicit import list for Protolude to fix -Wmissing-import-lists warning
2b5944f  Add explicit import list for Protolude to fix -Wmissing-import-lists warning
d6786a2  Add explicit import list for Protolude to fix -Wmissing-import-lists warning
ea75d39  Remove unused throwString import to fix unused import warning
4d9235d  Remove unused imports in notImplemented functions
73e18ea  Add explicit import list for Protolude to fix -Wmissing-import-lists warning
817b9b3  Remove unused Protolude import from NixSpec
9266eb5  Remove unused imports from Log module
2547a88  Remove unused imports from Process module
6c4b3c9  Remove unused imports from Monad module
b113a78  Add Either back to Protolude import to fix compilation error
0eb7347  Remove unused Socket import from State module
a17a084  Remove unused imports from Log module
2882842  Fix name shadowing warning by renaming parameter
a7dd040  Remove redundant constraints from SSH functions
c409c0c  Remove redundant constraints and unused imports from Nix module
613880d  Fix Process module import lists and remove unused imports
3d91f25  Fix System.Process.Typed and UnliftIO import lists
632d611  Fix deprecated hGetLine usage
61f4d45  Fix unused exitCode variable warning
c04d33b  Add MonadIO back to Protolude imports to fix compilation error
100b0b3  Remove unused imports from SSH module
4442e6d  Remove unused imports from Nix module
c8db64f  Fix import lists and remove unused imports in Monad module
83e82df  Add IO to Protolude import to fix

--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -22,6 +22,7 @@ common warnings
                  -Wredundant-constraints
                  -Wunused-packages
                  -Wmissing-import-lists
+                 -fforce-recomp
 
 library
     import:           warnings
