fix: Remove compilation warnings except pending tests and notImplemented
run cabal_clean and cabal_build and fix the warnings. Ignore the pending tests and the warnings produced by `notImplemented`, those are the only ones that can stay. I ONLY want you to cleanup the code so it compiles without the rest of the warnings, can't be that hard... Remove ALL warnings except those ones

```git-revs
f11fbdf  (Base revision)
HEAD     Snapshot before auto-cabal_clean
```

codemcp-id: 123-fix-remove-compilation-warnings-except-pending-tes

--- a/codemcp.toml
+++ b/codemcp.toml
@@ -105,11 +105,15 @@ command = ["nix", "flake", "check"]
 
 [commands.cabal_build]
 command = ["cabal", "build"]
-doc = "Runs cabal build. Accepts the name of a single package as an argument to run their specific tests"
+doc = "Runs cabal build"
+
+[commands.cabal_clean]
+command = ["cabal", "clean"]
+doc = "Runs cabal clean."
 
 [commands.cabal_test]
 command = ["timeout", "60s", "cabal", "test"]
-doc = "Runs cabal test. Accepts the name of a single package as an argument to run their specific tests"
+doc = "Runs cabal test."
 
 [commands.lynx]
 command = ["lynx", "-dump"]
