--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -94,6 +94,7 @@ test-suite spec
                     , stm
                     , containers
                     , plow-log
+                    , plow-log-async
                     , network
                     , unbounded-delays
                     , filepath
