feat: remove unused log trace and error constructors
Please remove all the unused log trace and error constructors

```git-revs
6d6bd13  (Base revision)
0b26935  Remove unused AgentVmTrace constructors
f23f467  Remove unused pattern matches from traceLevel function
679dc9a  Remove unused pattern matches from renderTrace function
bd74237  Remove unused VMError constructors
01df242  Snapshot before auto-cabal_build
b5bf0fb  Replace VMInvalidState with WorkspaceError for unimplemented operations
fca7da1  Snapshot before auto-cabal_build
3a6c550  Snapshot before auto-test
HEAD     Snapshot before auto-branch_log
```

codemcp-id: 198-feat-remove-unused-log-trace-and-error-constructor

--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -99,8 +99,7 @@ test-suite spec
     type:             exitcode-stdio-1.0
     main-is:          Spec.hs
     other-modules:
-                      AgentVM.NixSpec
-                    , AgentVM.StreamingProcessSpec
+                      AgentVM.StreamingProcessSpec
                     , AgentVM.StreamingSocketSpec
                     , Paths_agent_vm
     build-depends:    base
