--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -120,6 +120,7 @@ executable agent-vm-test
     import:           warnings
     main-is:          Main.hs
     other-modules:    AgentVM.NixSpec
+                    , AgentVM.VMLifecycleSpec
     build-depends:    protolude
                     , agent-vm
                     , agent-vm:test-utils
@@ -128,6 +129,7 @@ executable agent-vm-test
                     , generic-lens
                     , microlens
                     , filepath
+                    , unliftio
     hs-source-dirs:   integration-test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
