--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -107,6 +107,7 @@ test-suite spec
     other-modules:
                       AgentVM.StreamingProcessSpec
                     , AgentVM.StreamingSocketSpec
+                    , AgentVM.StreamingEscapeSpec
                     , Paths_agent_vm
     build-depends:    base
                     , protolude
@@ -116,6 +117,8 @@ test-suite spec
                     , bytestring
                     , network
                     , unbounded-delays
+                    , text
+                    , QuickCheck
     hs-source-dirs:   test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
