refactor: reorganize VMStatus and Git functions with workingDir support
Make the `status` MonadVM typeclass method return `Running VMStatus` when running. `VMStatus` is what `getDetailedVMStatus` returns. Move the code that calculates it to the library at `src/AgentVM/VMStatus.hs` and all the git functions to `src/AgentVM/Git` and make sure all the functions take a `workingDir` argument to pass it to the `-C` git option, all the callers should always use it on the VMConfig workspace when operating on a vm.

```git-revs
22f4320  (Base revision)
97d9c94  Create VMStatus module with types and functions moved from Main.hs
7759022  Create Git module with git functions moved from Main.hs, all taking workingDir argument
0278ec9  Fix import and reference gitLastCommitDiff correctly
7847bd4  Update VMState to make Running constructor carry VMStatus
9102ea2  Remove import and move type definitions to avoid circular imports
7c6acd2  Add VMStatus, MemoryInfo, CPUInfo type definitions and exports
d7567f1  Add imports for VMStatus-related types
a82b542  Add GitInfo import
f9e5197  Update VMState to make Running constructor carry VMStatus and add status type definitions
475fbd6  Remove type definitions and update exports
070d13b  Update imports to include status types and remove duplicate definitions
99c9346  Remove duplicate type definitions that are now in Types.hs
b632154  Add VMStatus import
2542919  Update getVMState to return Running VMStatus when VM is running
8304235  Update imports to use new modules and remove duplicate functions
6dccf3a  Remove duplicate type definitions that are now in Types.hs
f317778  Remove duplicate git functions that are now in Git module
a1143a2  Update isRunning function to handle new VMState structure
db37307  Remove duplicate rendering and status functions that are now in VMStatus module
2c6c106  Update showVMState to handle new VMState structure
2e9c412  Update statusVmWithName to extract VMStatus from Running constructor
d739ef3  Snapshot be

--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -35,6 +35,8 @@ library
                     , AgentVM.Interactive
                     , AgentVM.StreamingProcess
                     , AgentVM.StreamingSocket
+                    , AgentVM.Git
+                    , AgentVM.VMStatus
     build-depends:    base
                     , protolude
                     , unliftio
@@ -57,6 +59,7 @@ library
                     , microlens
                     , generic-lens
                     , template-haskell
+                    , time
     hs-source-dirs:   src
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
@@ -82,16 +85,12 @@ executable agent-vm
     main-is:          Main.hs
     build-depends:    protolude
                     , agent-vm
-                    , base
                     , optparse-applicative
                     , plow-log-async
                     , plow-log
                     , text
-                    , time
                     , directory
-                    , filepath
                     , unliftio
-                    , shelly
                     , unbounded-delays
                     , microlens
                     , generic-lens
