Create a patch file for mcp-proxy to add configurable server prefix support
```git-revs
662f0d8  (Base revision)
b153dd8  Snapshot before codemcp change
d48ac54  Snapshot before auto-mcp-proxy
HEAD     Fix patch format with proper context lines
```

codemcp-id: 207-untitled

--- a/codemcp.toml
+++ b/codemcp.toml
@@ -168,3 +168,6 @@ Runs the .#integration-test flake app with the arguments you pass"
 
 Arguments are passed to the python script. Make sure you quote them properly!
 """
+
+[commands.mcp-proxy]
+command = ["nix", "run", ".#mcp-proxy", "--"]
