feat: make shell escape key configurable
I want you to make the escape sequence in src/AgentVM/Interactive.hs configurable and add a `--shell-escape-key` option to the `create` and `update` commands in app/Main.hs to allow configuring it (make it optional, default to Ctrl-W). You will need to update the `VMConfig` type of course. I'm not sure if you can add an integration test for it under integration-test but if you can it'd be awesome. So me a **concise** plan once you have it before starting to implement it.

```git-revs
5c850b0  (Base revision)
ac3b483  Add shellEscapeKey field to VMConfig
ea7a818  Add default shellEscapeKey to defVMConfig
b008f24  Add createShellEscapeKey field to CreateConfig
ed106a9  Add --shell-escape-key option to parseCreateConfig
b44550f  Add shellEscapeKey to updateConfigToVMConfig
2279c8d  Add shellEscapeKey to createConfigToVMConfig
6d52dfa  Add shellEscapeKey parameter to interactWith and escape key parsing
fbce2d2  Update inputRelayWithEscape to use configurable escape key
50e8633  Update startVM to pass shellEscapeKey to interactWith
7656518  Update connectToVMShell to pass shellEscapeKey to interactWith
003ba8c  Add Data.Text import to Interactive module
139235a  Create integration test for configurable shell escape key
93628ae  Add ShellEscapeKeySpec to integration test suite
35a1bdd  Add ShellEscapeKeySpec.spec to the test suite
d0821c2  Add ShellEscapeKeySpec to cabal file other-modules
HEAD     Add shouldSatisfy to import list
```

codemcp-id: 204-feat-make-shell-escape-key-configurable

--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -129,6 +129,7 @@ executable agent-vm-test
     other-modules:    AgentVM.NixSpec
                     , AgentVM.VMLifecycleSpec
                     , AgentVM.ResetDestroySpec
+                    , AgentVM.ShellEscapeKeySpec
     build-depends:    protolude
                     , agent-vm
                     , agent-vm:test-utils
