--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -82,10 +82,12 @@ executable agent-vm
     main-is:          Main.hs
     build-depends:    protolude
                     , agent-vm
+                    , base
                     , optparse-applicative
                     , plow-log-async
                     , plow-log
                     , text
+                    , time
                     , directory
                     , filepath
                     , unliftio
@@ -96,6 +98,7 @@ executable agent-vm
     hs-source-dirs:   app
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
+                      , ScopedTypeVariables
     ghc-options:      -threaded -rtsopts -with-rtsopts=-N
 
 test-suite spec
