--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -37,6 +37,7 @@ library
                     , AgentVM.StreamingSocket
                     , AgentVM.Git
                     , AgentVM.VMStatus
+                    , AgentVM.VMCache
     build-depends:    base
                     , protolude
                     , unliftio
@@ -60,6 +61,8 @@ library
                     , generic-lens
                     , template-haskell
                     , time
+                    , atomic-write
+                    , containers
     hs-source-dirs:   src
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
@@ -92,6 +95,7 @@ executable agent-vm
                     , directory
                     , unliftio
                     , unbounded-delays
+                    , microlens
                     , microlens-mtl
                     , generic-lens
     hs-source-dirs:   app
@@ -108,6 +112,7 @@ test-suite spec
                       AgentVM.StreamingProcessSpec
                     , AgentVM.StreamingSocketSpec
                     , AgentVM.StreamingEscapeSpec
+                    , AgentVM.VMCacheSpec
                     , Paths_agent_vm
     build-depends:    base
                     , protolude
@@ -119,6 +124,8 @@ test-suite spec
                     , unbounded-delays
                     , text
                     , QuickCheck
+                    , directory
+                    , containers
     hs-source-dirs:   test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
@@ -141,6 +148,7 @@ executable agent-vm-test
                     , generic-lens
                     , microlens
                     , unliftio
+                    , filepath
     hs-source-dirs:   integration-test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
