--- a/agent-vm.cabal
+++ b/agent-vm.cabal
@@ -151,6 +151,7 @@ executable agent-vm-test
                     , microlens
                     , unliftio
                     , filepath
+                    , shelly
     hs-source-dirs:   integration-test
     default-language: Haskell2010
     default-extensions: NoImplicitPrelude
